FIX: ensures msg actions stay in live-pane
This would also fix a bug in firefox window on large screen (or specific circumstances) where the dropdown would appear under the scrollbar and making it barely usable.

--- a/assets/stylesheets/common/chat-message.scss
+++ b/assets/stylesheets/common/chat-message.scss
@@ -252,10 +252,10 @@
 
   position: absolute;
   opacity: 0;
-  padding-left: 4em;
-  padding-top: 0.25em;
+  padding-right: 1rem;
+  padding-top: 0.25rem;
   pointer-events: none;
-  right: 0.25em;
+  right: 0;
   top: -1.5em;
   z-index: 2;
 }
